--- a/deal_app/templates/account/email.html
+++ b/deal_app/templates/account/email.html
@@ -43,7 +43,7 @@
 </form>
 
 {% else %}
-<p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
+<p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have an e-mail address asociated with your account.  Add an e-mail address to receive notifications, reset your password, etc." %}</p>
 
 {% endif %}
 
