--- a/deal_app/templates/base.html
+++ b/deal_app/templates/base.html
@@ -1,4 +1,5 @@
 {% load static i18n %}
+{% block extrajs %} {% endblock extrajs %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +49,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'portfolios:list' %}">Portfolios <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -98,6 +99,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 {% block javascript %}
+  {% load render_bundle from webpack_loader %}
 
   <!-- Bootstrap JS and its dependencies-->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
