--- a/deal_app/templates/portfolios/portfolio_list.html
+++ b/deal_app/templates/portfolios/portfolio_list.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Portfolio List</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block title %}{{ user.username }}{% endblock %}
+
+{% block content %}
+ {% block inner %}
+    <div id="react">
+        <!-- Contents get replaced by mounted React.Component -->
+        <i class="fa fa-lg fa-spinner fa-spin"></i><br><br>
+        <i class="pending">Loading components...</i><br><br>
+    </div>
+
+    <script>
+        window.props = {{props|json}}; 
+        window.react_mount = document.getElementById('react');
+    </script>
+    <script src="/static/src/{{component}}"></script>
+{% endblock %}
+<!-- Webpack rendered JS -->
+{% render_bundle 'main' 'js' %}
+
+{% endblock content %}
