--- a/deal_app/templates/properties/property_list.html
+++ b/deal_app/templates/properties/property_list.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
 
-</head>
-<body>
-<h1>List</h1>
-</body>
-</html>
+{% block title %}{{ user.username }}{% endblock %}
+
+{% block content %}
+  <h1>Property information</h1>
+
+{% endblock content %}
