--- a/deal_app/templates/properties/property_detail.html
+++ b/deal_app/templates/properties/property_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load json_form_tags %}
 {% load crispy_forms_tags %}
 
 {% block title %}{{ user.username }}{% endblock %}
